# ankitron

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  IDEAS.md  README.md  RELEASING.md  SHORTCUTS.md  TODO.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy-site.yml  release.yml
docs/: CNAME  deck-file-format.md  index.html
electron/: main.js  preload.js  splash.html
scripts/: after-pack.cjs  generate-icon.mjs  stage-electron.mjs
src/: layout.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: anki.rs  elevenlabs.rs  main.rs
src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
src/components/: about-dialog.tsx  accuracy-sparkline.tsx  actions-menu.test.tsx  actions-menu.tsx  all-decks-list.tsx  anki-connection-error.tsx  breadcrumb.tsx  bulk-tag-dialog.tsx  card-editor.tsx  card-form.tsx  card-html.tsx  card-list-bulk-actions.tsx  card-list-note-row.test.tsx  card-list-note-row.tsx  card-list-segments.tsx  card-list-toolbar.tsx  card-list.test.tsx  card-list.tsx  card-preview.tsx  chart-dot.tsx  command-palette.tsx  confirm-dialog.tsx  connection-status.tsx  create-deck-dialog.tsx  danger-zone.tsx  deck-list.tsx  deck-picker.test.tsx  deck-picker.tsx  deck-settings.tsx  decks-import-export.tsx  delete-deck-dialog.tsx  elevenlabs-settings.tsx  empty-collection.tsx  file-drop-zone.test.tsx  file-drop-zone.tsx  flag-picker.tsx  full-screen-spinner.tsx  grade-distribution.tsx  header-nav.tsx  html-source-editor.tsx  (+37 more)
src/hooks/: use-all-tags.ts  use-bulk-actions.ts  use-card-list-shortcuts.ts  use-deck-import.tsx  use-deck-names.ts  use-deck-segments.ts  use-edit-sequence-run.ts  use-menu-placement.ts  use-note-drag.ts  use-note-search.ts  use-note-selection.ts  use-scroll-lock.ts  use-tag-undo.ts  use-updater.ts  use-vim-nav.ts
src/lib/: anki-client.ts  anki-fetch.test.ts  anki-fetch.ts  audio.test.ts  audio.ts  card-media.test.ts  card-preview.test.ts  card-preview.ts  cards.test.ts  cards.ts  cloze-typed-model.ts  cloze.test.ts  cloze.ts  deck-redirects.test.ts  deck-redirects.ts  deck-settings.ts  deck.test.ts  deck.ts  decks.ts  drag-badge.ts  edit-sequence.test.ts  edit-sequence.ts  elevenlabs.test.ts  elevenlabs.ts  experimental.ts  failure-message.ts  flags.ts  fold-text.test.ts  fold-text.ts  grades.ts  html-source.test.ts  html-source.ts  html-text.test.ts  html-text.ts  import-export.test.ts  note-fields.ts  (+22 more)
(+31 files in other folders)
