[package]
name = "ankitron"
version = "0.8.0"
edition = "2021"
license = "GPL-3.0-or-later"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
# preserve_order: keep AnkiConnect's JSON object key order when proxying
# responses (serde_json sorts keys alphabetically by default).
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["process", "time"] }
dirs = "6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
