[package]
name = "ankitron"
version = "0.38.0"
edition = "2021"
license = "GPL-3.0-or-later"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
# preserve_order: keep AnkiConnect's JSON object key order when proxying
# responses (serde_json sorts keys alphabetically by default).
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["process", "time"] }
dirs = "6"
# API key lives in the macOS Keychain (encrypted at rest), never in a file or
# the webview. apple-native is the macOS backend; add windows-native /
# sync-secret-service here if the app is ever built for those platforms.
keyring = { version = "3", features = ["apple-native"] }
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
